//
//  Destination.swift
//  Pokemontactics
//
//  Created by ShinTakeuchi on 2023/11/28.
//

enum HomePath: String {
    case gameStartPath = "GameStartView"
    case logViewPath = "LogView"
    case settingsPath = "SettingsView"
}

